Update calls to unprocessable_entity to unprocessable_content per warning (#312)

--- a/lib/templates/rails/scaffold_controller/controller.rb.tt
+++ b/lib/templates/rails/scaffold_controller/controller.rb.tt
@@ -26,7 +26,7 @@ class <%= controller_class_name %>Controller < ApplicationController
       redirect_to <%= index_helper %>_path, notice: "<%= human_name %> was successfully created."
     else
       set_form_variables
-      render :new, status: :unprocessable_entity
+      render :new, status: :unprocessable_content
     end
   end
 
@@ -35,7 +35,7 @@ class <%= controller_class_name %>Controller < ApplicationController
       redirect_to <%= index_helper %>_path, notice: "<%= human_name %> was successfully updated.", status: :see_other
     else
       set_form_variables
-      render :edit, status: :unprocessable_entity
+      render :edit, status: :unprocessable_content
     end
   end
 
