--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="actions text-center mb-4">
-        <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+        <%= f.submit "Email me reset password instructions", class: "btn btn-primary" %>
       </div>
     <% end %>
 
