--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,9 @@
 <footer class="bg-primary text-white py-4 mt-24">
   <div class="container mx-auto text-center">
-    <ul class="row">
-      <li>
-        <dt>Contact Us</dt>
-        <dd><%= Footer.phone %></dd>
-        <dd><%= Footer.general_questions %></dd>
-      </li>
-    </ul>
-    <p class="pt-4 text-lg text-white">A Window Between Worlds ® ™</p>
+    <p class="pt-4 text-sm text-white">
+      2026 A Window Between Worlds ® ™ • Registered 501(c)(3) EIN: 95-448606
+      <br>
+      Facilitator Portal built lovingly by <a href="https://www.rubyforgood.org" class="hover:underline hover:text-gray-300">Ruby for Good</a>
+    </p>
   </div>
 </footer>
