--- a/app/views/bookmarks/_flex.html.erb
+++ b/app/views/bookmarks/_flex.html.erb
@@ -17,7 +17,8 @@
           <% if workshop.full_name || workshop.user %>
             Thanks to
             <% if workshop.user %>
-              <%= link_to(workshop.full_name.present? ? workshop.full_name : workshop.user.full_name, user_path(workshop.user)) %>
+              <%= link_to(workshop.full_name.present? ? workshop.full_name :
+                            workshop.user.full_name, generate_facilitator_user_path(workshop.user)) %>
             <% else %>
               <%= workshop.full_name %>
             <% end %>
@@ -125,7 +126,7 @@
         Author:
         <% if workshop.user %>
           <%= link_to workshop.author_name,
-                      user_path(workshop.user),
+                      generate_facilitator_user_path(workshop.user),
                       class: "hover:underline",
                       data: { turbo: false, } %>
         <% else %>
