Fixes to dashboard (#355)
* Change workshop carousel styling

* Fix project path

--- a/app/views/dashboard/_featured_workshops.html.erb
+++ b/app/views/dashboard/_featured_workshops.html.erb
@@ -112,7 +112,7 @@
     </div>
   </div>
 
-  <div class="px-6 lg:px-24 bg-gray-300 pb-8 rounded-lg">
+  <div class="pl-4 pr-6 lg:pl-10 lg:pr-12 bg-gray-300 pb-8 rounded-lg">
     <div id="slider1">
       <a class="buttons prev" href="#">&#60;</a>
 
