--- a/app/views/shared/_navbar_user.html.erb
+++ b/app/views/shared/_navbar_user.html.erb
@@ -42,7 +42,7 @@
     <% if current_user.project_users.any? %>
       <% current_user.project_users.each do |project_user| %>
         <%= link_to "My team#{ " (" + project_user.project.name.truncate(12) + ")" if current_user.project_users.many? }",
-                    projects_path(project_user.project),
+                    project_path(project_user.project),
                     class:
                       "block px-4 py-2 text-sm text-gray-700 focus:bg-gray-100 focus:outline-hidden" %>
       <% end %>
