--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,7 +32,9 @@
        </ul>
      </div>
     </div>
-    <%= link_to "New Event", new_event_path, class: "whitespace-nowrap btn btn-secondary-outline" %>
+    <%= link_to "New Event",
+                new_event_path,
+                class: "whitespace-nowrap btn btn-secondary-outline" %>
   </div>
 </div>
 <!-- Divider -->
