--- a/app/views/facilitators/index.html.erb
+++ b/app/views/facilitators/index.html.erb
@@ -8,9 +8,11 @@
             <%= Facilitator.model_name.human.pluralize %> (<%= @facilitators_count %>)
           </h1>
           <div class="flex gap-2">
-            <%= link_to "New #{Facilitator.model_name.human.downcase}",
-                        new_facilitator_path,
-                        class: "admin-only bg-blue-100 btn btn-primary-outline" if current_user.super_user? %>
+            <% if current_user.super_user? %>
+              <%= link_to "New #{Facilitator.model_name.human.downcase}",
+                          new_facilitator_path,
+                          class: "admin-only bg-blue-100 btn btn-primary-outline" %>
+            <% end %>
           </div>
         </div>
 
