--- a/app/views/workshop_logs/_index.html.erb
+++ b/app/views/workshop_logs/_index.html.erb
@@ -10,7 +10,8 @@
           </h1>
           <div class="flex gap-2">
             <%= link_to "New #{WorkshopLog.model_name.human.downcase}",
-                        new_workshop_log_path, class: "btn btn-primary-outline" %>
+                        new_workshop_log_path,
+                        class: "btn btn-primary" %>
           </div>
         </div>
 
