--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -19,8 +19,8 @@
       </div>
       <% if current_user.super_user? %>
         <%= link_to "New workshop",
-        new_workshop_path,
-        class: "btn btn-primary-outline admin-only bg-blue-100" %>
+                    new_workshop_path,
+                    class: "admin-only bg-blue-100 btn btn-primary-outline" %>
       <% end %>
     </div>
   </div>
