--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,10 +6,11 @@
         <h1 class="text-2xl font-semibold text-gray-900">
           Organizations (<%= number_with_delimiter(@projects_count) %>)
         </h1>
-
-        <%= link_to "New Project",
-                    new_project_path,
-                    class: "btn btn-primary-outline w-full sm:w-auto text-center" %>
+        <% if current_user.super_user? %>
+          <%= link_to "New Project",
+                      new_project_path,
+                      class: "admin-only bg-blue-100 btn btn-primary-outline" %>
+        <% end %>
       </div>
 
       <!-- Optional filters -->
