--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -6,7 +6,9 @@
         <h2 class="text-2xl font-semibold mb-2">Resources (<%= @resources_count %>)</h2>
       </div>
       <% if current_user.super_user? %>
-        <%= link_to 'New Resource', new_resource_path, class: "btn btn-primary-outline admin-only bg-blue-100" %>
+        <%= link_to "New Resource",
+                    new_resource_path,
+                    class: "admin-only bg-blue-100 btn btn-primary-outline" %>
       <% end %>
     </div>
   </div>
