Further scope workshop_log data to @project.workshop_logs (#407)
* Further scope workshop_log data to @project.workshop_logs

* Adjust sql for dropdown vars

* Update project valid_attributes and factory to not include optional assns

* Change organization_location to organization_locality (and detect from associated addresses)

--- a/app/views/stories/_story_card.html.erb
+++ b/app/views/stories/_story_card.html.erb
@@ -27,7 +27,7 @@
         <p class="mt-1 text-sm text-gray-600">
           <% if story.respond_to?(:organization_name) && story.organization_name.present? %>
             <span class="font-medium"><%= story.organization_name %></span>
-            <% if story.respond_to?(:organization_location) && story.organization_location.present? %>, <%= story.organization_location %><% end %>
+            <% if story.respond_to?(:organization_locality) && story.organization_locality.present? %>, <%= story.organization_locality %><% end %>
             <% if story.respond_to?(:workshop) && story.workshop&.title.present? %> · <span>Workshop: <%= story.workshop.title %></span><% end %>
           <% elsif story.respond_to?(:workshop) && story.workshop&.title.present? %>
             <span>Workshop: <%= story.workshop.title %></span>
