--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -2,7 +2,11 @@
 <% story_title = ERB::Util.url_encode(@story.title) %>
 
 <div class="max-w-3xl mx-auto px-6 py-10 text-gray-800">
-  <!-- Title -->
+  <div class="text-right text-end">
+    <%= link_to "Website", safe_url(@story.website_url), class: "btn btn-secondary-outline" if  @story.website_url %>
+    <%= link_to "Dashboard", authenticated_root_path, class: "btn btn-secondary-outline" %>
+  </div>
+
   <h1 class="text-3xl sm:text-4xl font-bold leading-tight mb-2 text-gray-900 mt-6">
     <%= @story.title %>
   </h1>
