--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -4,7 +4,17 @@
   <% story_idea = @story_idea || f.object.story_idea %>
 
   <div class="admin-only bg-blue-100 p-3">
-
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <div>
+        <%= f.input :title, as: :text,
+                    input_html: { rows: 2,
+                                  value: f.object.title || @story_idea&.title } %>
+      </div>
+      <div class="flex gap-4">
+        <%= f.input :published, as: :boolean, wrapper_html: { class: "flex items-center" } %>
+        <%= f.input :featured, as: :boolean, wrapper_html: { class: "flex items-center" } %>
+      </div>
+    </div>
 
     <div class="flex flex-col md:flex-row md:space-x-4">
       <div class="flex-1 mb-4 md:mb-0">
@@ -28,10 +38,6 @@
                     value_method: :id,
                     selected: f.object.project_id || @story_idea&.project_id %>
       </div>
-    </div>
-
-    <div class="mb-3">
-      <%= f.input :title, input_html: { value: f.object.title || @story_idea&.title } %>
     </div>
 
     <div class="flex flex-wrap gap-4 justify-start">
@@ -75,9 +81,15 @@
                   input_html: { rows: 10, value: f.object.body || @story_idea&.body } %>
     </div>
 
-    <div class="mb-6">
+    <div class="flex gap-4 mb-6">
       <%= f.input :youtube_url,
-                  input_html: { value: f.object.youtube_url || @story_idea&.youtube_url } %>
+                  as: :text,
+                  hint: "To embed youtube video",
+                  input_html: { rows: 1, value: f.object.youtube_url || @story_idea&.youtube_url } %>
+      <%= f.input :website_url,
+                  as: :text,
+                  hint: "To link to external website",
+                  input_html: { rows: 1, value: f.object.website_url || @story_idea&.website_url } %>
     </div>
 
     <div class="flex flex-col md:flex-row md:space-x-4">
@@ -89,8 +101,6 @@
                     label: (f.object.story_idea ? (link_to "Story idea",
                       story_idea_path(story_idea), class: "hover:underline") : "Story idea").html_safe,
                     prompt: "Select idea" %>
-        <%= f.input :published, as: :boolean %>
-        <%= f.input :featured, as: :boolean %>
       </div>
       <div class="flex-1 mb-4 md:mb-0">
         <%= f.input :created_by_id,
@@ -126,7 +136,7 @@
                                                                            class: "hover:underline") : "Story spotlighted facilitator").html_safe %>
       </div>
       <%= f.hidden_field :updated_by_id, value: current_user.id %>
-      <%= f.hidden_field :updated_at, value: Time.now.utc %>
+
       <% if f.object.persisted? %>
         <div class="flex-1 mb-4 md:mb-0 ms-3 ps-3">
           Last updated by: <br>
