Show featured as a badge on indexes (#446)
* Show featured as a badge on indexes

* Ensure scopes and decorators

* Widen display of news, events, stories

* Add user to stories index spec

* Add padding above view-all buttons

--- a/app/views/dashboard/_community_news_item.html.erb
+++ b/app/views/dashboard/_community_news_item.html.erb
@@ -1,4 +1,4 @@
-<div class="m-2 p-4 bg-gray-300 rounded-lg">
+<div class="p-4 bg-gray-300 rounded-lg">
   <%= link_to community_news_item.reference_url, target: :blank, class: "flex flex-col md:flex-row" do %>
     <div class="grow">
       <h3 class="text-lg pb-2 font-medium text-gray-700"><%= community_news_item.title %></h3>
