--- a/app/views/dashboard/_stories.html.erb
+++ b/app/views/dashboard/_stories.html.erb
@@ -1,4 +1,4 @@
-<section class="px-8">
+<section class="stories">
   <div class="flex flex-col items-start mb-4">
     <div class="inline-block mr-24">
       <h2 class="text-2xl text-gray-700 font-medium m-2">Stories</h2>
@@ -11,7 +11,7 @@
       <%= render "story", story: story %>
     <% end %>
 
-    <div class="text-right text-end mr-2">
+    <div class="text-right text-end mt-4">
       <%= link_to "View all", stories_path, class: "btn btn-secondary-outline" %>
     </div>
   </div>
