--- a/app/views/dashboard/_events.html.erb
+++ b/app/views/dashboard/_events.html.erb
@@ -1,4 +1,4 @@
-<section class="px-8">
+<section class="events">
   <div class="flex flex-col items-start mb-4">
     <div class="inline-block mr-24">
       <h2 class="text-2xl text-gray-700 font-medium m-2">Events</h2>
@@ -11,7 +11,7 @@
       <%= render "event", event: event %>
     <% end %>
   </div>
-  <div class="text-right text-end mr-2">
+  <div class="text-right text-end mt-4">
     <%= link_to "View all", events_path, class: "btn btn-secondary-outline" %>
   </div>
 </section>
