--- a/app/views/dashboard/_popular_resources.html.erb
+++ b/app/views/dashboard/_popular_resources.html.erb
@@ -1,7 +1,7 @@
-<section class="flex flex-col mt-6 px-8">
+<section class="flex flex-col mt-6">
   <div class="flex flex-col items-start mb-4">
     <div class="inline-block mr-24">
-      <h2 class="text-2xl text-gray-700 font-medium m-2"><%= title %></h2>
+      <h2 class="text-2xl text-gray-700 font-medium"><%= title %></h2>
       <hr class="h-1 bg-primary border-0 rounded-sm my-2 mx-4">
     </div>
   </div>
