--- a/app/views/events/_card.html.erb
+++ b/app/views/events/_card.html.erb
@@ -11,6 +11,12 @@
       <%= link_to "#{event.title}#{" [HIDDEN]" if current_user.super_user? && !event.publicly_visible}",
       event_path(event),
       class: "text-gray-900 hover:underline font-medium" %>
+      <% if event.featured? %>
+        <span class="inline-flex items-center gap-1 ms-2 px-2 py-0.5 rounded-full text-sm font-medium
+        bg-yellow-100 text-yellow-800 whitespace-nowrap">
+          🌟 Featured
+        </span>
+      <% end %>
     </div>
   </h3>
 
