--- a/app/views/resources/_resource_card.html.erb
+++ b/app/views/resources/_resource_card.html.erb
@@ -1,5 +1,4 @@
 <% background_color = (resource.inactive? ? "bg-blue-100" : "bg-white") if controller_name == "resources" %>
-<% background_color = "bg-yellow-100" if resource.featured? && !resource.inactive && controller_name == "resources" %>
 
 <div class="flex flex-col md:flex-row <%= background_color %>
  border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition-all overflow-hidden">
@@ -37,7 +36,10 @@
         <%= link_to "#{ resource.title.titleize }#{
           "<span class='text-gray-500 text-sm font-normal'> (not published)
           </span>" if resource.inactive? && controller_name == "resources" }#{
-          "<span class='text-gray-500 text-sm font-normal'> (featured)
+          "<span class='text-gray-500 text-sm font-normal'>
+          <span class='inline-flex items-center gap-1 ms-2 px-2 py-0.5 rounded-full
+          text-sm font-medium bg-yellow-100 text-yellow-800 whitespace-nowrap'>
+                        🌟 Featured</span>
           </span>" if resource.featured? && controller_name == "resources" }".html_safe,
                     resource.featured_url.present? ? resource.featured_url : resource_path(resource),
                     class: "hover:underline" %>
@@ -60,7 +62,7 @@
             <% if current_user.super_user? %>
               <%= link_to "<span class='far fa-edit'></span>".html_safe,
                           edit_resource_path(resource),
-                          class: "btn btn-secondary-outline admin-only bg-blue-100" %>
+                          class: "admin-only bg-blue-100 btn btn-secondary-outline" %>
             <% end %>
           <% end %>
         </div>
